# libQtShadowsocks

./: CMakeLists.txt  README.md  botan.pc
shadowsocks-libqss/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
shadowsocks-libqss/service/: CMakeLists.txt
